# logtools

./: CMakeLists.txt  ColoredSTDLogSink.cpp  FILELogSink.cpp  LICENSE.txt  README.md  STDLogSink.cpp  build.yml  log.cpp  log.h
src/: FILELogSink.cpp  STDLogSink.cpp
